# memstore

./: .env.example  README.md  package-lock.json  package.json
backend/: mcp-server.js  server.js
backend/middleware/: auth.js
backend/routes/: admin.js  agents.js  memory.js  newsletter.js  webhook.js
backend/services/: email.js  embed.js  memory.js
database/: functions.sql  schema.sql
public/: admin.html  guide.html  index.html  quickstart.html  sitemap.xml
public/blog/: ai-agent-memory-api.html  ai-agent-memory-between-sessions.html  autogen-agent-memory-tutorial.html  build-ai-assistant-with-memory.html  crewai-agent-memory.html  how-to-give-ai-agents-long-term-memory.html  langchain-memory.html  langchain-persistent-memory.html  openai-function-calling-memory.html  vector-database-ai-agents.html
public/compare/: memstore-vs-chromadb.html  memstore-vs-mem0.html  memstore-vs-pgvector.html  memstore-vs-pinecone.html  memstore-vs-zep.html
public/docs/: crewai-memory-between-runs.html  langchain-memory-api.html  persistent-memory-ai-agents.html
sdk/node/: README.md  package.json
sdk/node/examples/: basic.js
sdk/node/src/: index.js
sdk/python/: LICENSE  README.md  pyproject.toml  setup.py
sdk/python/memstore/: __init__.py  client.py
sdk/python/memstore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/memstore_client.egg-info/: PKG-INFO  SOURCES.txt
