[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memstore-client"
version = "0.1.0"
description = "Persistent memory API for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["ai", "agents", "memory", "langchain", "crewai", "autogen", "llm", "vector"]
dependencies = ["requests>=2.28.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://memstore.dev"
Documentation = "https://memstore.dev/docs/persistent-memory-ai-agents.html"
Repository = "https://github.com/CodeAndCalories/memstore"
"Bug Tracker" = "https://github.com/CodeAndCalories/memstore/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["memstore*"]
